--- a/index.html
+++ b/index.html
@@ -9,19 +9,41 @@
   <script src="https://unpkg.com/d3@5.7.0/dist/d3.min.js"> crossorigin</script>
   <script src="https://unpkg.com/underscore@1.9.1/underscore.js"> crossorigin</script>
 
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/@typopro/web-bebas-neue@3.7.5/TypoPRO-BebasNeue.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
   <script src="code.js" type="text/babel"></script>
 
   <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+    }
     img {
-      width: 100px;
+      width: 200px;
+      display: block;
+      margin: 0 auto;
+    }
+    h1,h2,h3,h4 {
+      text-align: center;
+      font-family: 'TypoPRO Bebas Neue';
+    }
+    h3 {
+      font-size: 1.3em;
+    }
+    .content {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    hr {
+      margin: 5em;
+      border-width: 2px;
+      border-color: #3a8887;
     }
   </style>
 </head>
 <body>
 
   <div id="root"></div>
-
 
 </body>
 </html>
