--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
       font-family: 'Montserrat', sans-serif;
     }
     img {
-      width: 200px;
       display: block;
       margin: 0 auto;
+    }
+    img.logo {
+      width: 200px;
     }
     h1,h2,h3,h4 {
       text-align: center;
